# Babel-cpp

./: CMakeLists.txt  Doxyfile  README.md  conanfile.txt  test.cpp
.github/workflows/: Build-Testing-Manually.yml  Build-Testing.yml
client/: CMakeLists.txt  main.cpp
client/src/: Client.cpp  Client.hpp
client/src/Audio/: data.hpp
client/src/Audio/Optus/: Optus.cpp  Optus.h
client/src/Audio/Opus/: Opus.cpp  Opus.hpp
client/src/Audio/Opus/IEncoder/: IEncoder.hpp
client/src/Audio/PortAudio/: PortAudio.cpp  PortAudio.h
client/src/Audio/portAudio/: PortAudio.cpp  PortAudio.hpp
client/src/Audio/portAudio/AAudio/: AAudio.hpp
client/src/Audio/portAudio/IAudio/: IAudio.hpp
client/src/GUI/: GUI.cpp  GUI.h  MainWindow.cpp  MainWindow.hpp
client/src/GUI/GUIController/: GUIController.cpp  GUIController.hpp
client/src/GUI/Modules/: Button.cpp  Button.hpp  CallGUI.cpp  CallGUI.hpp  Container.cpp  Container.hpp  FriendBox.cpp  FriendBox.hpp  FriendInfo.cpp  FriendInfo.hpp  FriendsList.cpp  FriendsList.hpp  InputText.cpp  InputText.hpp  UserBox.cpp  UserBox.hpp  UserGUI.cpp  UserGUI.hpp
client/src/GUI/Scenes/: AScene.cpp  AScene.hpp  LoginScene.cpp  LoginScene.hpp  MainScene.cpp  MainScene.hpp  SceneManager.cpp  SceneManager.hpp
client/src/Network/: INetwork.hpp  IPackage.hpp
client/src/Network/TCP/: NetworkTcp.cpp  NetworkTcp.hpp  PackageManagerTcp.cpp  PackageManagerTcp.hpp  PackageTcp.cpp  PackageTcp.hpp
client/src/Network/UDP/: NetworkUdp.cpp  NetworkUdp.hpp  PackageUdp.cpp  PackageUdp.hpp
client/src/Utils/: Utils.cpp  Utils.hpp
client/src/package/: IPackage.hpp  PackageManager.cpp  PackageManager.hpp
common/: CallStatus.hpp  FriendStatus.hpp  Log.cpp  Log.hpp  Protocol.hpp
common/Error/: ThrowError.cpp  ThrowError.hpp
common/Network/TCP/: NetworkTcp.cpp  NetworkTcp.hpp  PackageTcp.cpp  PackageTcp.hpp
common/Package/: IPackage.hpp
common/TCP/: CommonPackages.hpp
doc/html/: AAudio_8hpp.html  AAudio_8hpp_source.html  AScene_8cpp.html  AScene_8hpp.html  AScene_8hpp_source.html  Arguments_8hpp.html  Arguments_8hpp_source.html  AutogenUsed_8txt.html  Button_8cpp.html  Button_8hpp.html  Button_8hpp_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  CMakeRuleHashes_8txt.html  CallGUI_8cpp.html  CallGUI_8hpp.html  CallGUI_8hpp_source.html  CallStatus_8hpp.html  CallStatus_8hpp.js  CallStatus_8hpp_source.html  Call_8cpp.html  Callback_8cpp.html  Callback_8hpp.html  Callback_8hpp.js  Callback_8hpp_source.html  Client_8cpp.html  Client_8hpp.html  Client_8hpp_source.html  CommonPackages_8hpp.html  CommonPackages_8hpp.js  CommonPackages_8hpp_source.html  Container_8cpp.html  Container_8hpp.html  Container_8hpp_source.html  Database_8cpp.html  Database_8hpp.html  Database_8hpp.js  Database_8hpp_source.html  (+567 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+104 more)
server/: CMakeLists.txt  conanfile.txt
server/API/: Route.cpp
server/src/: Main.cpp  Server.cpp  Server.hpp  main.cpp
server/src/API/: API.cpp  API.hpp  HTTPCodes.hpp  Route.cpp  Route.hpp
server/src/API/Route/: Error.hpp  HTTPCodes.hpp  Response.hpp  Route.cpp  Route.hpp
server/src/API/Route/Data/: Data.cpp  Data.hpp
server/src/API/Route/List/: Listing.cpp  Listing.hpp
server/src/API/Router/: Router.cpp  Router.hpp
server/src/Auth/: Auth.cpp  Auth.h  Client.cpp  Connection.cpp  Connection.hpp
server/src/DB/: Database.cpp  Database.hpp  Db.cpp  Db.h  Exception.cpp  Functions.cpp  IDatabase.hpp
server/src/Network/: Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Exception.cpp  INetwork.hpp  Network.cpp  Network.hpp  Worker.cpp  Worker.hpp
server/src/Network/Client/: Client.cpp  Client.hpp  Socket.cpp  Socket.hpp
server/src/Route/: Arguments.hpp  Route.cpp  Route.hpp
server/src/Route/List/: Call.cpp  CallUtils.cpp  CallUtils.hpp  Callback.cpp  Callback.hpp  Friend.cpp  Listing.cpp  Listing.hpp  Utils.cpp  Utils.hpp
server/src/Router/: Router.cpp  Router.hpp
server/src/User/: Pool.cpp  Pool.hpp  User.cpp  User.h  User.hpp
test/: CMakeLists.txt  conanfile.txt
test/client/: main.cpp
test/client/Opus/: Opus.cpp  Opus.hpp
test/client/portAudio/: PortAudio.cpp  PortAudio.hpp
